# mcp-studies

./: .env_example  README.md  client.py  langchain_mcp_client.py  pyproject.toml  terminal_server.py
output/: langchain_mcp_client.txt  mcp_client.txt  teste-mcp-gemini.txt
